--- a/ExpenseApp/index.html
+++ b/ExpenseApp/index.html
@@ -22,6 +22,9 @@
    <script type="text/x-handlebars">
     <h2 id="mainHeading">ExpenseApp</h2>
 
+    {{#link-to 'charts'}}Charts{{/link-to}}
+    {{#link-to 'index'}}Index{{/link-to}}
+
     {{outlet}}
 
   </script>
@@ -53,7 +56,7 @@
         }
     </style>
 
-  <script type="text/x-handlebars" id="expenses">
+  <script type="text/x-handlebars" id="index">
     <p>Expenses: {{expenseCount}}</p>
     <ul>
     {{#each}}
@@ -64,10 +67,9 @@
     {{/each}}
     <li>{{input value=name action="saveExpense" on="enter" placeholder="New expense name here"}}</li>
     </ul>
-    {{outlet chartsarea}}
   </script>
 
-   <script type="text/x-handlebars" id='expenses/index'>
+   <script type="text/x-handlebars" id='charts'>
     <div class="chart-container">
       <!-- <button {{action "getData"}}>Reload</button> -->
       {{horizontal-bar-chart data=getData}}
