--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Expense Application</title>
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.css">
+  <link rel="stylesheet" href="css/style.css"> <!-- import for input boxes -->
+    <!-- <link rel="stylesheet" href="css/bootstrap-theme.css"> -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/pure/0.5.0/pure-min.css">
       <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/2.1.0/normalize.css">
   <link rel='stylesheet' href="css/stylenew.css">
   <link rel="stylesheet" href="css/ember-charts.css">
@@ -22,7 +22,6 @@
 <body>
 
    <script type="text/x-handlebars">
-    <h2 id="mainHeading">ExpenseApp</h2>
           <div id="header" class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-header">
         <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".navbar-collapse">
@@ -48,23 +47,26 @@
                 </ul>
             </li>
         </ul>
-       <!-- <ul class="nav navbar-nav pull-right">
+       <!--/* <ul class="nav navbar-nav pull-right">
             <li class="dropdown">
                 <a href="#" id="nbAcctDD" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-user"></i>Username<i class="icon-sort-down"></i></a>
                 <ul class="dropdown-menu pull-right">
                     <li><a href="#">Log Out</a></li>
                 </ul>
             </li>
-        </ul> -->
+        </ul> */-->
     </nav>
 </div>
 <div id="wrapper">
 
   <div id="sidebar-wrapper" class="col-md-1">
       <div id="sidebar">
-          <ul class="nav list-group">
+          <ul class="list-unstyled">
               <li>
-                  <a class="list-group-item" href="#"><i class="icon-home icon-1x"></i>Sidebar Item 1</a>
+                  {{#link-to 'expenses.add' class='list-group-item'}}
+                  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                  Add new
+                  {{/link-to}}
               </li>
           </ul>
       </div>
@@ -79,6 +81,47 @@
   </script>
 
   <div class="spinner"></div>
+
+  <!-- <script type="text/x-handlebars" id="expenses">
+  {{outlet}}
+  </script> -->
+
+  <script type="text/x-handlebars" id="expenses/index">
+    <p>Expenses: {{expenseCount}}</p>
+    <ul>
+    {{#each}}
+        <li><button {{action "deleteExpense" this}} class="pure-button pure-button-primary button-xsmall button-error">
+        <i class="fa fa-close"></i>
+        </button>
+        {{group}} 
+        {{name}} <b><em>(${{amount}})</b></em></li>
+    {{/each}}
+    <li>
+    {{input value=name placeholder="New expense name here"}} 
+    $({{input value=amount placeholder="20" class="inputamount"}})
+    <button {{action "saveExpense"}}>Save</button>
+    </li>
+    </ul>
+  </script>
+
+   <script type="text/x-handlebars" id='expenses/charts'>
+    <div class="chart-container">
+      {{vertical-bar-chart data=model}}
+    </div>
+  </script>
+
+  <script type="text/x-handlebars" id='expenses/add'>
+    <dl class="dl-horizontal">
+      <dt>Expense name</dt>
+      <dd>{{input value=name placeholder="Expense name here"}}</dd>
+      <dt>Amount ($)</dt>
+      <dd>{{input value=amount placeholder="$20" class="inputamount"}}</dd>
+      <dd><br></dd>
+      <dd><button {{action "saveExpense"}}>Save</button></dd>
+    </dl>
+  </script>
+
+  <!--// Do not edit below this line unless adding libraries //-->
 
   <div>
     <style scoped>
@@ -104,33 +147,7 @@
             background: rgb(66, 184, 221); /* this is a light blue */
         }
     </style>
-
- <!-- <script type="text/x-handlebars" id="expenses">
-  {{outlet}}
-  </script> -->
-
-  <script type="text/x-handlebars" id="expenses/index">
-    <p>Expenses: {{expenseCount}}</p>
-    <ul>
-    {{#each}}
-        <li><button {{action "deleteExpense" this}} class="pure-button pure-button-primary button-xsmall button-error">
-        <i class="fa fa-close"></i>
-        </button>
-        {{name}} <b><em>(${{amount}})</b></em></li>
-    {{/each}}
-    <li>
-    {{input value=name placeholder="New expense name here"}} 
-    $({{input value=amount placeholder="20" class="inputamount"}})
-    <button {{action "saveExpense"}}>Save</button>
-    </li>
-    </ul>
-  </script>
-
-   <script type="text/x-handlebars" id='expenses/charts'>
-    <div class="chart-container">
-      {{vertical-bar-chart data=model}}
     </div>
-  </script>
 
    <script src="js/libs/d3.min.js"></script>
   <script src="js/libs/c3.min.js"></script>
@@ -139,13 +156,13 @@
   <script src="js/libs/ember-1.7.0.js"></script>
   <script src="js/libs/ember-c3.js"></script>
   <script src="bower_components/ember-data/ember-data.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
-  <script src="http://builds.emberjs.com/list-view/list-view-latest.js"></script>
+  <script src="js/libs/lodash.min.js"></script>
+  <script src="js/libs/list-view-latest.js"></script>
   <script src="js/libs/ember-charts.js"></script>
   <script src="js/libs/ember-widgets.js"></script>
 <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/ember-data.js/1.0.0-beta.11/ember-data.js"></script> -->
   <script src="js/app.js"></script>
-  <script src="js/barchart.js"></script>
+  <script src="js/models.js"></script>
   <!-- to activate the test runner, add the "?test" query string parameter -->
   <script src="tests/runner.js"></script>
 </body>
